Add new feature1

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
   <h1>Hello GitHub! yooooo </h1>
+  <p></p>
+  <p>THIS IS FEATURE 1  HAHAHHAHAHAHHA NEW feature !! xd</p>
 </body>
 </html>
