--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Hello GitHub! yooooo </h1>
   <p></p>
-  <p>THIS IS FEATURE 1  HAHAHHAHAHAHHA NEW feature !! xd</p>
+  <p>This is a new feature (button) </p>
 </body>
 </html>
