--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Hello GitHub! yooooo </h1>
   <p></p>
+  <p>This is a new feature (drop down)</p>
   <p>This is a new feature (button) </p>
 </body>
 </html>
